Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjIntObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        Integer var
        var:SetValue(5)
        return var
    end
end